--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Questionnaire - Fitness & Well-being</title>
+    <title>Survey - Fitness & Well-being</title>
     <style>
         * {
             box-sizing: border-box;
@@ -2308,4 +2308,5 @@
         window.addEventListener('afterprint', restoreAfterPrint);
     </script>
 </body>
+
 </html>
